# storage/api-docs/api-docs.json
@@ -281,13 +281,18 @@
                                 "description": "image url",
                                 "type": "string"
                             },
-                            "created_at": {
-                                "description": "created date",
-                                "type": "timestamp"
-                            },
                             "expired_at": {
                                 "description": "expired date",
-                                "type": "timestamp"
+                                "type": "string",
+                                "format": "date-time",
+                                "example": "2023-01-01 00:00:00"
+                            },
+                            "items": {
+                                "description": "result array",
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/PromptGenerateResultResources"
+                                }
                             }
                         }
                     }
@@ -307,7 +312,8 @@
                             },
                             "url": {
                                 "description": "image url",
-                                "type": "string"
+                                "type": "string",
+                                "example": "https://oaidalleapiprodscus.blob.core.windows.net/private/org-aoEz5iNLIebmbf63rluY80og/user-qu4iAXir7V7epx4GnSdnMeVz/img-ioNQVko8vomEodTbjN965eBP.png?st=2023-04-04T07%3A39%3A18Z&se=2023-04-04T09%3A39%3A18Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-04T08%3A35%3A10Z&ske=2023-04-05T08%3A35%3A10Z&sks=b&skv=2021-08-06&sig=qH5M9JKZhHSr4mGafIaT/p29MX9OP2aHaicAuWCO5JA%3D"
                             }
                         }
                     }
